# impulse-response-estimation

./: COPYING  Makefile  README.md
.github/workflows/: benchmarks.yml  matlab.yml
benchmarks/: create_fabian.py  create_toy_example.py
benchmarks/data/: fabian.mat
code/: .gitignore  kernel.py  plots.py  requirements.txt  script.py  solver.py
irest-matlab/: Fabian.m  README.md  checkZtrans.m  fabian.m  proof_of_concept_large_example.m  proof_of_concept_large_example_exp_input.m  proof_of_concept_large_example_noise_lag_input.m  proof_of_concept_small_example.m  toy_example.m
irest-matlab/Common/: causal_conv.m  construct_eq_for_disc_lag.m  discrete_lag_inner.m  generate_laguerre_coeffs.m  generate_rational.m  large_laguerre.m  thomas.m  z_trans.m
irest-matlab/Common/RAIT/: addimag.m  arg_der.m  arg_fun.m  arg_inv.m  arg_inv_anim.m  argdr_fun.m  argdr_inv.m  biort_coeffs.m  biort_generate.m  biort_system.m  biortdc_coeffs.m  biortdc_generate.m  biortdc_system.m  bisection_order.m  blaschkes.m  blaschkes_img.m  coeff_conv.m  coeffd_conv.m  coords2params.m  coords2params_all.m  discretize_dc.m  discretize_dr.m  dotdc.m  dotdr.m  kernel.m  lf_generate.m  lf_system.m  (+25 more)
irest-python/: pyproject.toml
irest-python/src/irest/: __init__.py
latex/: .gitignore  mymathmacros.sty  mynotation.sty  mypackages.sty  preprint.cls  references.bib  root.tex  siamplain.bst
python/: pyproject.toml
resources/rirs_simulated/: GH_Gewandhaus_T30.csv  KE_Basilica_of_Eberbach_Monastery_T30.csv  KH_Chamber_Music_Hall_of_Konzerthaus_Berlin_T30.csv  MK_Murakuni-Za_T30.csv  get_rirs.py
