[project]
name = "irest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Art Pelling", email = "a.pelling@tu-berlin.de" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "pynufft>=2025.1.1",
]

[project.scripts]
irest = "irest:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
