[project]
name = "irest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Art Pelling", email = "a.pelling@tu-berlin.de" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyfar>=0.7.3",
    "pynufft>=2025.1.1",
    "scipy>=1.16.2",
]

[project.scripts]
irest = "irest:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
